3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Apply modified parts of patch #1439490 (Fix in random map generation) by CF
Development Team Schmorp.de <crossfire@schmorp.de>.
---
random_maps/exit.c: In place_exits() check for a valid exit path before
   dereferencing it.
random_maps/treasure.c: In find_closest_monster() include monsters at map
   border. In find_enclosed_spot() prevent access to out of map tiles.
Andreas Kirschbaum 2006-03-04

Apply patch #1436833 (Patch for forked lightning crash at map borders) by CF
Development Team Schmorp.de <crossfire@schmorp.de>.
---
server/spell_attack.c: In forklightning() prevent access to out of map tiles.
Andreas Kirschbaum 2006-03-04

common/loader.l: Prevent excess whitespace while saving objects.
common/loader.c: Rebuilt.
Andreas Kirschbaum 2006-02-27

Apply patch by Marc Alexander Lehmann to improve server performance.
---
include/map.h: Move path field to end of struct. Since this field was huge it
   pushed all other fields to large offsets in the struct. Moving it to the
   end of the struct mapdef should not break anything but will improve
   performance and reduce the server code by >3500 bytes.
Andreas Kirschbaum 2006-02-27

------------------------------------------------------------------------------
Changes for 1.9.0:

lib/collect.pl.in: Again fix generation of 'editor_folder' field to make
   sub-folder selection work again.
lib/archetypes: Rebuilt.
Andreas Kirschbaum 2006-02-26

*/Makefile{in.am}: Fix plugin makefiles so that 'make distcheck' works.  Using
  relative path names for files to include in distribution does not work -
  need to have a makefile in each directory.