@@ -56,7 +56,9 @@ UNIQUE_DIR, TEMPLATE_DIR,
 TMPDIR,
 STAT_LOSS_ON_DEATH,
 PK_LUCK_PENALTY,
-USE_PERMANENT_EXPERIENCE,
+PERMANENT_EXPERIENCE_RATIO,
+DEATH_PENALTY_RATIO,
+DEATH_PENALTY_LEVEL,
 BALANCED_STAT_LOSS,
 NOT_PERMADETH,
 SIMPLE_EXP,
